_cache/v0.18.0/openblas/specs.md
---
title: "openblas"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["0.3.20"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 3, "num_specs_by_stack": {"e4s": 1, "radiuss": 2, "root": 3, "data-vis-sdk": 1, "tutorial": 2}}
spec_details: [{"hash": "n7j2cwzk6ve24agfjlulbs6kgdw2zyn3", "compiler": "gcc@=7.5.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["e4s", "radiuss", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-7.5.0-openblas-0.3.20-n7j2cwzk6ve24agfjlulbs6kgdw2zyn3.spack"}, {"hash": "dydujpzz2yqemiiboxdl2qb5e73wqesm", "compiler": "gcc@=7.5.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=none"], "stacks": ["radiuss", "data-vis-sdk", "root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-7.5.0-openblas-0.3.20-dydujpzz2yqemiiboxdl2qb5e73wqesm.spack"}, {"hash": "ew72qgylu65tqvbbrk6zk54vs3jwsrip", "compiler": "gcc@=8.4.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=none"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-8.4.0-openblas-0.3.20-ew72qgylu65tqvbbrk6zk54vs3jwsrip.spack"}]
---