_cache/v0.18.1/openblas/specs.md
---
title: "openblas"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["0.3.10", "0.3.20"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 7, "num_specs_by_stack": {"root": 7, "radiuss": 2, "e4s": 1, "aws-ahug": 2, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2, "data-vis-sdk": 1, "tutorial": 2}}
spec_details: [{"hash": "n7j2cwzk6ve24agfjlulbs6kgdw2zyn3", "compiler": "gcc@=7.5.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["root", "radiuss", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-7.5.0-openblas-0.3.20-n7j2cwzk6ve24agfjlulbs6kgdw2zyn3.spack"}, {"hash": "yiuqiwwr3vhbz7log7bdovvslnrb2vcd", "compiler": "gcc@=7.3.1", "versions": ["0.3.10"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "patches=865703b", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/openblas-0.3.10/linux-amzn2-x86_64_v4-gcc-7.3.1-openblas-0.3.10-yiuqiwwr3vhbz7log7bdovvslnrb2vcd.spack"}, {"hash": "yai2wqqii7pce2dnkckaundfw2zwnvdz", "compiler": "gcc@=7.3.1", "versions": ["0.3.10"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "patches=865703b", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/openblas-0.3.10/linux-amzn2-aarch64-gcc-7.3.1-openblas-0.3.10-yai2wqqii7pce2dnkckaundfw2zwnvdz.spack"}, {"hash": "yafnlnxubkhgh5o4lc3ifklu7ooqf7dw", "compiler": "gcc@=7.3.1", "versions": ["0.3.10"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "patches=865703b", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["root", "aws-ahug", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/openblas-0.3.10/linux-amzn2-x86_64_v3-gcc-7.3.1-openblas-0.3.10-yafnlnxubkhgh5o4lc3ifklu7ooqf7dw.spack"}, {"hash": "dydujpzz2yqemiiboxdl2qb5e73wqesm", "compiler": "gcc@=7.5.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=none"], "stacks": ["root", "data-vis-sdk", "tutorial", "radiuss"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-7.5.0-openblas-0.3.20-dydujpzz2yqemiiboxdl2qb5e73wqesm.spack"}, {"hash": "2oc3alkrf4nuhncus5rqpsptwdexz3rc", "compiler": "gcc@=7.3.1", "versions": ["0.3.10"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "patches=865703b", "+pic", "+shared", "symbol_suffix=none", "threads=openmp"], "stacks": ["aws-ahug-aarch64", "aws-isc-aarch64", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/openblas-0.3.10/linux-amzn2-graviton2-gcc-7.3.1-openblas-0.3.10-2oc3alkrf4nuhncus5rqpsptwdexz3rc.spack"}, {"hash": "ew72qgylu65tqvbbrk6zk54vs3jwsrip", "compiler": "gcc@=8.4.0", "versions": ["0.3.20"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["~bignuma", "~consistent_fpcsr", "~ilp64", "+locking", "+pic", "+shared", "symbol_suffix=none", "threads=none"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/openblas-0.3.20/linux-ubuntu18.04-x86_64-gcc-8.4.0-openblas-0.3.20-ew72qgylu65tqvbbrk6zk54vs3jwsrip.spack"}]
---